--- a/test.html
+++ b/test.html
@@ -34,8 +34,16 @@
       </div>
 
     </div>
+		<div id="outerContainer">
+			<div id="container">
+				<div id="item">
+
+				</div>
+			</div>
+		</div>
 
     <script src="js/test.js"></script>
+    <script src="js/drag.js"></script>
 
   </body>
 </html>
