drag second pass

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 		<link href="css/test.css" rel="stylesheet">
   </head>
 	<body>
-	 <div class="browser resizable" id="div_id">
+	 <div class="browser resizable" id="draggable">
 			<div class="resizers">
 				<div class='resizer top-left'></div>
 				<div class='resizer top-right'></div>
