--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   </head>
 	<body>
 		<div class="canvas">	<!--required for detecting clicks outside parent-->
-			<div class="browser resizable__off" id="draggable"> <!--why can't I add resizers here, why does it need its own div?? If I do, .resizers disappears-->
+			<div class="browser" id="draggable"> <!--why can't I add resizers here, why does it need its own div?? If I do, .resizers disappears-->
 				<div class="resizers">
 					<div class='resizer top-left'></div>
 					<div class='resizer top-right'></div>
