--- a/test.html
+++ b/test.html
@@ -38,6 +38,7 @@
 			</div>
 		</div>
 
+	<script src="js/selection.js"></script>
 	<script src="js/resize.js"></script>
 	<script src="js/drag.js"></script>
 
