multi drag 2nd pass

--- a/test.html
+++ b/test.html
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 
-			<div id="draggable" class="browser item"> <!--why can't I add resizers here, why does it need its own div?? (w/o it, .resizers disappears)-->
+			<div id="draggable" class="browser item dragNdrop dragNdrop--drag"> <!--why can't I add resizers here, why does it need its own div?? (w/o it, .resizers disappears)-->
 				<div class="resizers">
 					<div class='resizer top-left'></div>
 					<div class='resizer top-right'></div>
