multi drag 3rd pass - resizers buggy

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   </head>
 	<body>
 		<div id="canvas" class="canvas">	<!--required for detecting clicks outside parent-->
-			<div id="draggable" class="browser item"> <!--why can't I add resizers here, why does it need its own div?? (w/o it, .resizers disappears)-->
+			<div id="draggable1" class="browser item"> <!--why can't I add resizers here, why does it need its own div?? (w/o it, .resizers disappears)-->
 				<div class="resizers">
 					<div class='resizer top-left'></div>
 					<div class='resizer top-right'></div>
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 
-			<div id="draggable" class="browser item"> <!--Does this need unique ID?-->
+			<div id="draggable2" class="browser item"> <!--Does this need unique ID?-->
 				<div class="resizers">
 					<div class='resizer top-left'></div>
 					<div class='resizer top-right'></div>
