grouping first pass

--- a/test.html
+++ b/test.html
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 
-			<div id="draggable2" class="browser item"> <!--Does this need unique ID?-->
+			<div id="draggable2" class="browser item">
 				<div class="resizers">
 					<div class='resizer top-left'></div>
 					<div class='resizer top-right'></div>
