fix console log for ds

--- a/test.html
+++ b/test.html
@@ -66,12 +66,11 @@
 
 		</div>
 
-	<script src="js/ds.min.js"></script>
-	<script src="js/dnd.min.js"></script>
+	<script src="node_modules/dragselect/dist/ds.min.js"></script>
+	<script src="node_modules/npm-dragndrop/dist/dNd.min.js"></script>
 	<script src="js/dragndrop.js"></script>
 	<script src="js/selection.js"></script>
 	<script src="js/resize.js"></script>
-<!--	<script src="js/drag.js"></script>--> <!--buggy-->
 
   </body>
 </html>
