multi drag 6th pass

--- a/interact.html
+++ b/interact.html
@@ -35,7 +35,7 @@
         </div>
       </div>
     </div> <!--browser-->
-    <div class="browser item resize-drag"> <!--browser-->
+    <div class="browser resize-drag"> <!--browser-->
       <div class="resizers">
         <div class='resizer top-left'></div>
         <div class='resizer top-right'></div>
